tests/core/error/fts-snippet-7.rq
SELECT (fts:snippet(?u, '>', '<', '...', 'a') AS ?snippet) { ?u fts:match "a" }
